[tool.poetry]
name = "connector-http"
version = "0.1.0"
description = "Make HTTP Requests available to SpiffWorkflow Service Tasks"
authors = ["Jon Herron <jon.herron@yahoo.com>"]
readme = "README.md"
packages = [{include = "connector_http", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
